Fix smal CSS issue on activity title in header on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -610,7 +610,7 @@ md-dialog.activity-dialog {
 
 .leftCardSmall {
     border-bottom: 1px solid #e4e4e4 !important;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.08) !important;
+    /*box-shadow: 0 1px 5px rgba(0, 0, 0, 0.08) !important;*/
 }
 
 .rightCardLarge {
